[tool.poetry]
name = "Search User Gists"
version = "0.1.0"
description = "Searching User Github Gists"
authors = ["Jatin"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.3.2"
Werkzeug = "2.3.6"
requests = "2.28.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
